Thu Jul  7 14:05:44 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeProjectBase.pm:
        * modules/ProjectCreator.pm:

          Factor code out of MakeProjectBase into ProjectCreator which will
          allow for less code in future Make based modules.

        * templates/make.mpd:

          Modified to generate Makefiles that do not have lines that end in
          spaces.

Wed Jul  6 13:00:22 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Options.pm:

          Support - or -- as option specifiers.

        * templates/automake.mpd:

          Removed grouped file support as it can not work correctly with
          this project type.  Since all of the project files for a single
          directory are combined into one, the same group names could be
          used (in different projects) and cause conflicts once they are
          combined.

Wed Jul  6 10:33:21 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Corrected negated wildcard matching where the pattern contained a
          directory name.  The negated wildcard was always being applied to
          the files in the current directory.

Wed Jul  6 08:25:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Corrected some minor documentation mistakes.

        * modules/ProjectCreator.pm:

          Added support for automatic grouping of generated files based on
          the group name of the custom input file.

        * templates/bmake.mpd:

          Added Codeguard support.

Tue Jul  5 10:25:18 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Added macros and compile_flags to outter if check to allow these
          to be part of the CPPFLAGS (if none of the other variables in the
          if are not defined).

Tue Jul  5 07:23:07 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:
